fix overflow

--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -5,4 +5,5 @@
   background-position: 50%;
   border: none;
   background-color: #fff;
+  flex-shrink: 0;
 }
