--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -5,4 +5,7 @@
   font-weight: 900;
   line-height: 120%;
   text-align: left;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
