--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -7,5 +7,6 @@
   background-repeat: no-repeat;
   background-color: #000;
   border: 1px solid #fff;
+  flex-shrink: 0;
 }
 
