--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -5,6 +5,9 @@
   font-weight: 400;
   line-height: 122%;
   text-align: left;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 @media screen and (max-width: 380px) {
   .profile__description {
