--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -3,6 +3,7 @@
   margin: 0 30px 0;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 @media screen and (max-width: 790px) {
   .profile__info {
